--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ header.clicked .nav-modal{
 	height: 10px;
 	border-radius: 100%;
 	margin: 0 auto;
-	background-color: #4ab7c3;
+	background-color: #338197;
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
@@ -182,9 +182,10 @@ nav{
 }
 
 .nav-modal ul li a:hover {
-	color: #231f20;
+	color: #4ab7c3;
 	text-decoration: none;
 }
+
 header.clicked nav{
 	opacity: 1;
 }
